--- a/public/index.html
+++ b/public/index.html
@@ -1030,6 +1030,12 @@
                         document.body.classList.remove("overflow-hidden"); // restore scroll
                     }, 500); // match transition duration
                 }
+
+                document.getElementById('name').value = "";
+                document.getElementById('email').value = "";
+                document.getElementById('contact').value = "";
+                document.getElementById('address').value = "";
+                document.getElementById('pincode1').value = "";
             });
 
             // Submit form
