--- a/public/shipping-policy.html
+++ b/public/shipping-policy.html
@@ -84,7 +84,7 @@
   <main class="container mx-auto px-6 lg:px-12">
     <div class="grid grid-cols-1 lg:grid-cols-4 gap-8">
       <!-- Sidebar -->
-      <aside class="lg:col-span-1 sticky top-8 self-start">
+      <aside class="lg:col-span-1 lg:sticky lg:top-8 self-start">
         <div class="glass p-4 rounded-2xl border border-white/30 shadow-md">
           <h2 class="text-sm font-semibold text-slate-700 mb-3">Quick links</h2>
           <nav class="flex flex-col gap-2 text-sm text-slate-600">
