Terms, about, contact pages linked

--- a/public/index.html
+++ b/public/index.html
@@ -541,9 +541,11 @@
                 <div>
                     <h4 class="mb-3 font-semibold">Quick links</h4>
                     <ul class="space-y-2 text-sm text-neutral-300">
-                        <li><a class="hover:text-white" href="/privacy-policy.html">Privacy Policy</a></li>
-                        <li><a class="hover:text-white" href="/refund-policy.html">Refund Policy</a></li>
-                        <li><a class="hover:text-white" href="/shipping-policy.html">Shipping Policy</a></li>
+                    <li><a class="hover:text-white" href="/terms-and-conditions.html">Terms & Conditions</a></li>
+                    <li><a class="hover:text-white" href="/privacy-policy.html">Privacy Policy</a></li>
+                    <li><a class="hover:text-white" href="/contact.html">Contact Us</a></li>
+                    <li><a class="hover:text-white" href="/refund-policy.html">Refund Policy</a></li>
+                    <li><a class="hover:text-white" href="/about.html">About Us</a></li>
                     </ul>
                 </div>
 
@@ -728,23 +730,23 @@
                     <form id="buyForm">
                         <label class="block text-black font-semibold" for="name">Name</label>
                         <input type="text" id="name" placeholder="Name" required
-                            class="min-w-0 w-full border mb-3 border-gray-300 text-black rounded-md px-3 py-2 focus:outline-none focus:ring-2 focus:ring-blue-400" />
+                            class="min-w-0 w-full border bg-white mb-3 border-gray-300 text-black rounded-md px-3 py-2 focus:outline-none focus:ring-2 focus:ring-blue-400" />
 
                         <label class="block text-black font-semibold" for="email">Email</label>
                         <input type="email" id="email" placeholder="Email" required
-                            class="min-w-0 w-full border mb-3 border-gray-300 text-black rounded-md px-3 py-2 focus:outline-none focus:ring-2 focus:ring-blue-400" />
+                            class="min-w-0 w-full border bg-white mb-3 border-gray-300 text-black rounded-md px-3 py-2 focus:outline-none focus:ring-2 focus:ring-blue-400" />
 
                         <label class="block text-black font-semibold" for="contact">Phone Number</label>
                         <input type="number" id="contact" placeholder="Contact" required
-                            class="min-w-0 w-full border mb-3 border-gray-300 text-black rounded-md px-3 py-2 focus:outline-none focus:ring-2 focus:ring-blue-400" />
+                            class="min-w-0 w-full border bg-white mb-3 border-gray-300 text-black rounded-md px-3 py-2 focus:outline-none focus:ring-2 focus:ring-blue-400" />
 
                         <label class="block text-black font-semibold" for="address">Address</label>
                         <input type="text" id="address" placeholder="Address" required
-                            class="min-w-0 w-full border mb-3 border-gray-300 text-black rounded-md px-3 py-2 focus:outline-none focus:ring-2 focus:ring-blue-400" />
+                            class="min-w-0 w-full border bg-white mb-3 border-gray-300 text-black rounded-md px-3 py-2 focus:outline-none focus:ring-2 focus:ring-blue-400" />
 
                         <label class="block text-black font-semibold" for="pincode1">Enter Your Pincode</label>
                         <input type="number" id="pincode1" placeholder="Pincode" required
-                            class="min-w-0 w-full border mb-3 border-gray-300 text-black rounded-md px-3 py-2 focus:outline-none focus:ring-2 focus:ring-blue-400" />
+                            class="min-w-0 w-full border bg-white mb-3 border-gray-300 text-black rounded-md px-3 py-2 focus:outline-none focus:ring-2 focus:ring-blue-400" />
 
                         <button type="submit" class="w-full bg-yellow-400 text-black py-2 rounded-md 
                                         hover:bg-yellow-500 transition">
