--- a/public/privacy-policy.html
+++ b/public/privacy-policy.html
@@ -241,12 +241,12 @@
             <div class="flex-1">
               <p class="text-sm text-slate-600">Questions, requests, or concerns? Reach out:</p>
               <ul class="mt-3 text-sm text-slate-700 space-y-1">
-                <li><strong>Email:</strong> <a class="text-indigo-600 hover:underline" href="mailto:privacy@example.com">privacy@example.com</a></li>
-                <li><strong>Address:</strong> 123 Example St, City, Country</li>
+                <li><strong>Email:</strong> <a class="text-indigo-600 hover:underline" href="casabells.in@gmail.com">casabells.in@gmail.com</a></li>
+                <li><strong>Phone:</strong>7827967598</li>
               </ul>
             </div>
             <div class="w-full md:w-56">
-              <a href="mailto:privacy@example.com" class="inline-flex items-center justify-center w-full py-2 px-4 rounded-lg bg-indigo-600 text-white font-medium shadow hover:brightness-105">Contact Privacy Team</a>
+              <a href="mailto:casabells.in@gmail.com" class="inline-flex items-center justify-center w-full py-2 px-4 rounded-lg bg-indigo-600 text-white font-medium shadow hover:brightness-105">Contact Privacy Team</a>
             </div>
           </div>
 
@@ -274,9 +274,11 @@
                 <div>
                     <h4 class="mb-3 font-semibold text-white">Quick links</h4>
                     <ul class="space-y-2 text-sm text-neutral-300">
-                        <li><a class="hover:text-white" href="/privacy-policy.html">Privacy Policy</a></li>
-                        <li><a class="hover:text-white" href="/refund-policy.html">Refund Policy</a></li>
-                        <li><a class="hover:text-white" href="/shipping-policy.html">Shipping Policy</a></li>
+                      <li><a class="hover:text-white" href="/terms-and-conditions.html">Terms & Conditions</a></li>
+                      <li><a class="hover:text-white" href="/privacy-policy.html">Privacy Policy</a></li>
+                      <li><a class="hover:text-white" href="/contact.html">Contact Us</a></li>
+                      <li><a class="hover:text-white" href="/refund-policy.html">Refund Policy</a></li>
+                      <li><a class="hover:text-white" href="/about.html">About Us</a></li>
                     </ul>
                 </div>
 
@@ -306,6 +308,8 @@
    
     // Mobile menu
     $('#menuBtn').addEventListener('click', () => $('#mobileNav').classList.toggle('hidden'));
+
+  document.getElementById('menuBtn').addEventListener('click', () => document.getElementById('mobileNav').classList.toggle('hidden'));    
   </script>
 </body>
 </html>
