--- a/public/refund-policy.html
+++ b/public/refund-policy.html
@@ -81,7 +81,7 @@
             </div>
         </div>
     </header>
-  <main class="container mx-auto px-6 lg:px-12">
+  <main class="container mx-auto px-6 lg:px-12 mt-10">
     <div class="grid grid-cols-1 lg:grid-cols-4 gap-8">
       <!-- Sidebar -->
       <aside class="lg:col-span-1 lg:sticky lg:top-8 self-start">
@@ -180,12 +180,12 @@
             <div class="flex-1">
               <p class="text-sm text-slate-600">Need help with a refund? Our support team is here to assist:</p>
               <ul class="mt-3 text-sm text-slate-700 space-y-1">
-                <li><strong>Email:</strong> <a class="text-emerald-600 hover:underline" href="mailto:support@example.com">support@example.com</a></li>
-                <li><strong>Phone:</strong> +1 (555) 123-4567</li>
+                <li><strong>Email:</strong> <a class="text-emerald-600 hover:underline" href="mailto:casabells.in@gmail.com">casabells.in@gmail.com</a></li>
+                <li><strong>Phone:</strong>7827967598</li>
               </ul>
             </div>
             <div class="w-full md:w-56">
-              <a href="mailto:support@example.com" class="inline-flex items-center justify-center w-full py-2 px-4 rounded-lg bg-emerald-600 text-white font-medium shadow hover:brightness-105">Request Refund</a>
+              <a href="mailto:casabells.in@gmail.com" class="inline-flex items-center justify-center w-full py-2 px-4 rounded-lg bg-emerald-600 text-white font-medium shadow hover:brightness-105">Request Refund</a>
             </div>
           </div>
           <p class="mt-4 text-xs text-slate-500">Last updated: September 17, 2025</p>
@@ -211,11 +211,13 @@
 
                 <div>
                     <h4 class="mb-3 font-semibold text-white">Quick links</h4>
-                    <ul class="space-y-2 text-sm text-neutral-300">
-                        <li><a class="hover:text-white" href="/privacy-policy.html">Privacy Policy</a></li>
-                        <li><a class="hover:text-white" href="/refund-policy.html">Refund Policy</a></li>
-                        <li><a class="hover:text-white" href="/shipping-policy.html">Shipping Policy</a></li>
-                    </ul>
+                  <ul class="space-y-2 text-sm text-neutral-300">
+                    <li><a class="hover:text-white" href="/terms-and-conditions.html">Terms & Conditions</a></li>
+                    <li><a class="hover:text-white" href="/privacy-policy.html">Privacy Policy</a></li>
+                    <li><a class="hover:text-white" href="/contact.html">Contact Us</a></li>
+                    <li><a class="hover:text-white" href="/refund-policy.html">Refund Policy</a></li>
+                    <li><a class="hover:text-white" href="/about.html">About Us</a></li>
+                  </ul>
                 </div>
 
                 <div>
@@ -237,6 +239,8 @@
     </footer>
   <script>
     document.getElementById('year').textContent = new Date().getFullYear();
+
+  document.getElementById('menuBtn').addEventListener('click', () => document.getElementById('mobileNav').classList.toggle('hidden'));    
   </script>
 </body>
 </html>
