Mobile nav linking

--- a/public/index.html
+++ b/public/index.html
@@ -200,7 +200,7 @@
             <!-- Mobile nav -->
             <div id="mobileNav" class="md:hidden hidden pb-3">
                 <nav class="flex flex-wrap gap-x-6 gap-y-2 text-sm text-neutral-300">
-                    <a class="hover:text-white" href="#">Home</a>
+                    <a class="hover:text-white" href="./index.html">Home</a>
                     <a class="hover:text-white" href="#">Shop</a>
                     <a class="hover:text-white" href="#">Blog</a>
                     <a class="hover:text-white" href="#">Tracking</a>
